[tool.poetry]
name = "python-code"
version = "0.1.0"
description = "Python Code Examples and Tests"
authors = ["David Agrest <dagrest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
